# Plantlens

./: .gitignore  AGENTS.md  FINAL_READY_STATE.md  PLANTLENS.md  README.md  bms_3d.html  bms_server.py  hmi_probe.py  modbus_scout.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/agents/: README.md  pyproject.toml
apps/agents/agents/: __init__.py  main.py  registry.py
apps/agents/agents/prompts/: graph_draft.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/app/: README.md  __init__.py  dependencies.py  lifespan.py  main.py  settings.py
apps/api/app/auth/: README.md  __init__.py  dependencies.py  principal.py  service.py
apps/api/app/db/: README.md  __init__.py  base.py  session.py
apps/api/app/db/models/: __init__.py  audit.py  authored.py  compiled.py  derived.py  event.py
apps/api/app/db/repositories/: __init__.py  audit.py
apps/api/app/hmi/: __init__.py  bench_adapter.py  contracts.py  fault_rules.py  incident_builder.py  operator_actions.py  projector.py  runtime_bridge.py  status.py
apps/api/app/incidents/: README.md  incident_checklist.py  incident_room_service.py  incident_store.py  incident_timeline.py
apps/api/app/ingest/: README.md  __init__.py  pipeline.py  quarantine.py
apps/api/app/ingest/adapters/: __init__.py  base.py  csv_adapter.py  xlsx_adapter.py
apps/api/app/ingest/detectors/: __init__.py  csv_dialect.py  document_kind.py
apps/api/app/ingest/drafts/: __init__.py  builder.py
apps/api/app/ingest/gates/: __init__.py  gate1_artifact_integrity.py  gate2_canonical_schema.py  gate3_industrial_truth.py
apps/api/app/ingest/mapping/: __init__.py  candidates.py  similarity.py
apps/api/app/ingest/normalizers/: __init__.py  asset.py  common.py  priority.py  quality.py  register.py  tag.py  timestamp.py  unit.py
apps/api/app/ingest/parsers/: __init__.py  common.py  register_map.py  signal_list.py
apps/api/app/ingest/reports/: __init__.py  builder.py
apps/api/app/ingest/stores/: __init__.py  base.py  file_raw_store.py  file_run_store.py  memory_stores.py
apps/api/app/routers/: README.md  __init__.py  agents.py  compiler.py  gateway_commission.py  gateway_status.py  health.py  hmi.py  incidents.py  ingest.py  internal_auth.py  library.py  offline_ingest.py  plc_status.py  runtime_api.py  simulator.py  ws.py
apps/api/app/runtime/: README.md  alarm_engine.py  asset_status.py  calm_card_engine.py  config_loader.py  dag_runtime.py  evidence.py  graph_compile.py  projection.py  quality.py  runtime_state.py  runtime_tick.py  situation_engine.py  websocket_hub.py
apps/api/app/runtime/simulator/: README.md  scenario_runner.py  simulator_gateway.py
apps/api/app/schemas/: README.md  __init__.py  alarm.py  audit.py  calm_card.py  common.py  component_library.py  plant_assembly.py  runtime_evidence.py  situation.py  tag_frame.py
apps/api/app/schemas/ingest/: __init__.py  (+10 more)
apps/api/app/services/: README.md  agent_queue.py  audit_chain.py  observability.py
apps/api/app/studio/: README.md  compiler.py  config_store.py  graph_checks.py  validators.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_database_layer.py
apps/api/tests/: README.md  conftest.py  test_agent_approval_bridge.py  test_agent_boundary.py  test_agents.py  test_alarm_engine.py  test_api_health.py  test_asset_status.py  test_audit_chain.py  test_auth_rbac.py  test_calm_card_engine.py  test_dag_runtime.py  test_db_layer.py  test_gateway_commission.py  test_gateway_ingest.py  test_gateway_status.py  test_graph_compile.py  test_incidents.py  test_projection.py  test_quality.py  test_runtime_core.py  test_runtime_evidence.py  test_runtime_seam.py  test_runtime_tick_quality.py  test_scenario_matrix.py  test_scenarios_regression.py  test_schema_contracts.py  test_simulator_gateway.py  test_situation_engine.py  test_studio_compiler.py
apps/api/tests/integration/: test_offline_ingest_api.py
apps/gateway/: README.md  pyproject.toml
apps/gateway/gateway/: __init__.py  diagnostics.py  health.py  main.py  modbus_poller.py  publish.py  raw_serial_reader.py  register_codec.py  serial_client.py  settings.py  simulator_adapter.py  tag_frame.py
apps/gateway/gateway/plc_bridge/: README.md  action_request_writer.py  advisory_writer.py  bridge_service.py  diagnosis_encoder.py  plc_feedback_reader.py  plc_output_map.json
apps/gateway/tests/: test_diagnostics.py  test_gateway_guardian.py  test_health_commission.py  test_modbus_poller.py  test_plc_bridge.py  test_raw_serial_reader.py  test_register_codec.py
(+697 files in other folders)
