[project]
name = "plantlens-agents"
version = "0.1.0"
description = "PlantLens agents — DRAFT-ONLY AI. Proposes config/rules/scenarios/notes/explanations behind a human-approval gate. Never on the live diagnosis path; never writes hardware; never auto-approves (rule R5)."
requires-python = ">=3.12"
dependencies = [
  "fastapi~=0.137",
  "uvicorn[standard]~=0.49",
  "pydantic~=2.13",
  "pydantic-settings~=2.7",
  "httpx~=0.28",
  "structlog~=24.0",
  "langgraph",                # stateful, human-in-the-loop workflows (the approval gate is a node)
  "langchain~=1.3",           # sparingly: create_agent + provider abstraction
  "openai",                   # primary drafting engine (structured outputs / function calling)
  # "google-genai",           # secondary / fallback
  # retrieval: SQLite FTS5 (stdlib) first; add "chromadb" only when the corpus justifies it
]

[project.optional-dependencies]
dev = ["pytest~=8.0", "pytest-asyncio~=0.24"]
rag = ["chromadb"]

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
