[project]
name = "plantlens-api"
version = "0.1.0"
description = "PlantLens API — FastAPI modular monolith: ingest, runtime (alarm/DAG/situation/calm-card), studio compiler, incidents, audit."
requires-python = ">=3.12"

# Install per chunk (see docs/LIBRARIES.md). These are the validated baselines; pin exact
# patches in your lockfile. Grouped by the build chunk that first needs them.
dependencies = [
  # Chunk 1 — API skeleton, DB, auth, audit
  "fastapi~=0.137",
  "uvicorn[standard]~=0.49",
  "pydantic~=2.13",
  "pydantic-settings~=2.7",
  "sqlalchemy~=2.0",
  "alembic~=1.18",
  "aiosqlite~=0.22",        # MVP DB; swap to psycopg[binary]~=3.2 for Postgres
  "structlog~=24.0",
  # Chunk 2 — simulator runtime
  "orjson~=3.10",
  # Chunk 3 — engines
  "networkx~=3.3",          # compile-time graph checks only (NOT the runtime hot path)
  # Chunk 4 — studio compiler
  "pyyaml~=6.0",
  # Auth (Chunk 1) — pick ONE path:
  "authlib~=1.7",           # production OIDC/JWT verify
  # "python-jose[cryptography]", "passlib[bcrypt]",  # local dev bootstrap alternative
]

[project.optional-dependencies]
dev = [
  "pytest~=8.0",
  "pytest-asyncio~=0.24",
  "httpx~=0.28",            # async test client + outbound calls
  "ruff~=0.6",
  "mypy~=1.11",
]
observability = [
  "opentelemetry-sdk~=1.35",
  "opentelemetry-exporter-otlp",
  "prometheus-client~=0.25",
]
postgres = ["psycopg[binary]~=3.2"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
